# mlx-playground

./: CMakeLists.txt  Makefile  README.md
.claude/: skill-stats.md
.claude/skills/ast-grep/: SKILL.md
.claude/skills/ast-grep/references/: cli.md  examples.md  patterns.md  project-setup.md  rewrite-transform.md  rule-operators.md  testing.md  yaml-rules.md
.claude/skills/create-hook/: SKILL.md
.claude/skills/create-hook/references/: events-reference.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/create-skill/references/: checklist.md  hooks-best-practices.md  patterns.md
.claude/skills/format-cpp/: SKILL.md
.claude/skills/format-cpp/references/: examples.md  namespace-aliases.md
.claude/skills/metal-guide/: SKILL.md
.claude/skills/metal-guide/references/: address-spaces-and-operators.md  advanced-features.md  atomics.md  data-types.md  examples.md  functions-and-attributes.md  standard-library.md  textures-and-samplers.md
.claude/skills/mlx-guide-cpp/: SKILL.md
.claude/skills/mlx-guide-cpp/references/: examples.md  metal-extension.md  ops-reference.md
.claude/skills/skill-stat/: SKILL.md
.claude/skills/skill-stat/scripts/: record-stat.py
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/devices/: CMakeLists.txt  devices.cpp
src/hello_mlx/: CMakeLists.txt  main.cpp
